--- a/index.html
+++ b/index.html
@@ -332,9 +332,11 @@
           <!-- end of project section -->
         </div>
       </section>
+      <section>
       <div>
         <div class="paddingTopp"></div>
       </div>
+      </section>
       <section id="contact" class="contact">
         <h2 id="about1" class="about1">CONTACT ME</h2>
         <div class="barz"></div>
