--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <h2 id="about2" class="aboutSizer contact-paragraph"><strong>Jamesconnorhill@gmail.com</strong></h2>
           </div>
           <div class="email-entry">
-            <label class="email-label center correctFont" for="email">Phone Number:</label>
+            <label class="email-label center correctFont cancelLink" for="email">Phone Number:</label>
             <h2 id="about2" class="aboutSizer contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
           </div>
           <div class="message-entry center">
