--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           </div>
           <div class="email-entry">
             <label class="email-label center correctFont cancelLink" for="email">Phone Number:</label>
-            <h2 id="about2" class="aboutSizer contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
+            <a id="about2" class="aboutSizer contact-paragraph"><strong>+1 (812) 603-9832</strong></a>
           </div>
           <div class="message-entry center">
             <label class="message-label center correctFont" for="message">LinkedIn:</label>
