--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
             <h2 id="about2" class="aboutSizer contact-paragraph"><strong>Jamesconnorhill@gmail.com</strong></h2>
           </div>
           <div class="email-entry">
-            <label class="email-label center correctFont cancelLink" for="email">Phone Number:</label>
-            <a id="about2" class="aboutSizer contact-paragraph"><strong>+1 (812) 603-9832</strong></a>
+            <label class="email-label center correctFont" for="email">Phone Number:</label>
+            <a id="about2" class="aboutSizer contact-paragraph cancelLink"><strong>+1 (812) 603-9832</strong></a>
           </div>
           <div class="message-entry center">
             <label class="message-label center correctFont" for="message">LinkedIn:</label>
