--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
               <a id="profile-link" target="_blank" href="https://www.facebook.com/connor.hill.96155/">
                 <i class="ss fab fa-facebook-f fa-2x"></i>
               </a>
-              <a id="profile-link" href="https://github.com/MeruemMoniker">
+              <a id="profile-link" href="https://github.com/ConnorJamesHill">
                 <i class="ss fab fa-github fa-2x"></i>
               </a>
               <a id="profile-link" href="https://www.instagram.com/connorjhill1/">
