--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 id="about4" class="aboutSizer2">I'm an <strong>iOS and front end web developer</strong> building iOS apps and the front end of websites that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
             <h2 id="about5" class="aboutSizer2">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS and web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development, web development, and programming in general.</h2>
             <h2 id="about6" class="aboutSizer2">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
-            <a class="about-button" href="./#contact">Contact</a>
+            <a class="about-button" href="./#contactLanding">Contact</a>
           </div>
           <div>
             <h2 id="about3" class="about3">My skills</h2>
@@ -350,7 +350,7 @@
             <a id="about2" class="aboutSizer contact-paragraph cancelLink"><strong>+1 (812) 603-9832</strong></a>
           </div>
           <div class="message-entry center">
-            <label class="message-label center correctFont" for="message">LinkedIn:</label>
+            <label id="contactLanding" class="message-label center correctFont" for="message">LinkedIn:</label>
             <a id="about2" class="aboutSizer contact-paragraph center contactLink" href="https://www.linkedin.com/in/connor-j-hill/"><strong>Message Me!</strong></a>
           </div>
       </section>
