--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
       </div>
       </section>
       <section id="contact" class="contact">
+        <div id="contactLanding"></div>
         <h2 id="about1" class="about1">CONTACT ME</h2>
         <div class="barz"></div>
         <h2 id="about2" class="aboutSizer contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible!</h2>
@@ -350,7 +351,7 @@
             <a id="about2" class="aboutSizer contact-paragraph cancelLink"><strong>+1 (812) 603-9832</strong></a>
           </div>
           <div class="message-entry center">
-            <label id="contactLanding" class="message-label center correctFont" for="message">LinkedIn:</label>
+            <label class="message-label center correctFont" for="message">LinkedIn:</label>
             <a id="about2" class="aboutSizer contact-paragraph center contactLink" href="https://www.linkedin.com/in/connor-j-hill/"><strong>Message Me!</strong></a>
           </div>
       </section>
