--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="https://connorjhill.netlify.app/">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contactLanding">Contact</a></li>
             </ul>
           </nav>
         </header>
