--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
       </div>
       </section>
       <section id="contact" class="contact">
-        <div id="contactLanding"></div>
-        <h2 id="about1" class="about1">CONTACT ME</h2>
-        <div class="barz"></div>
+        <div></div>
+        <h2 id="about1" class="about1 paddingTopp">CONTACT ME</h2>
+        <div id="contactLanding" class="barz"></div>
         <h2 id="about2" class="aboutSizer contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible!</h2>
           <div class="name-entry">
             <label class="name-label center correctFont" for="name">Email:</label>
