--- a/index.html
+++ b/index.html
@@ -155,6 +155,14 @@
           </div>
         </div>
 
+        <!-- dividing bar  -->
+        <div>
+          <div class="paddingTop"></div>
+          <div class="projectBarz"></div>
+          <div class="paddingBottom"></div>
+        </div>
+        <!-- next project -->
+
         <div id="GalaxyGuide">
           <h2 id="about3" class="about3">GalaxyGuide Overview</h2>
             <div>
@@ -194,6 +202,14 @@
               <a class="about-button1" href="https://connorjhill.netlify.app/#projects">Go Back</a>
             </div>
         </div>
+
+        <!-- dividing bar  -->
+        <div>
+          <div class="paddingTop"></div>
+          <div class="projectBarz"></div>
+          <div class="paddingBottom"></div>
+        </div>
+        <!-- next project -->
 
       </section>
       <section>
