--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
             </div>
         </div>
 
+        <!-- dividing bar  -->
+        <div>
+          <div class="paddingTop"></div>
+          <div class="projectBarz"></div>
+          <div class="paddingBottom"></div>
+        </div>
+        <!-- next project -->
+
         <div id="SnowSeeker">
           <h2 id="about3" class="about3">SnowSeeker Overview</h2>
           <div>
