--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
         </div>
         <!-- next project -->
 
+        <div class="button-container">
+          <a class="about-button" href="https://meruemmoon.netlify.app/">See All of My Projects</a>
+        </div>
+
       </section>
       <section>
       <div>
