adding yt imgs and links

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <a href="https://www.youtube.com/">
               <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
             </a>
-              <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="AppExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="AppExampleTwo" />
             <img class="image" src="https://i.postimg.cc/15gxSTbn/To-Do-List2.png" alt="AppExampleThree" />
           </div>
             <div class="button-container">
@@ -152,7 +152,9 @@
           </div>
           <h2 id="about3" class="about3">See it For Yourself</h2>
           <div id="imgContainer">
-            <img />
+            <a href="https://www.youtube.com/">
+              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+            </a>
             <img />
             <img />
           </div>
@@ -199,7 +201,9 @@
             </div>
             <h2 id="about3">See it For Yourself</h2>
             <div id="imgContainer">
-              <img />
+              <a href="https://www.youtube.com/">
+                <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+              </a>
               <img />
               <img />
             </div>
