--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <!-- next project -->
 
         <div class="button-container">
-          <a class="about-button" href="https://meruemmoon.netlify.app/">See All of My Projects</a>
+          <a class="contact-button" href="https://meruemmoon.netlify.app/">See All of My Projects</a>
         </div>
 
       </section>
