--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2 id="about2" class="aboutSizer">These are some of my projects!</h2>
         
         <div id="ToDoList">
-          <h2 id="about3">ToDoList Overview</h2>
+          <h2 id="about3">ToDoList</h2>
           <div>
             <h2 class="textLeft">
               ToDoList is your essential app for organizing tasks with a classic to-do list format. Create an account to unlock seamless task management with infinite to-dos, a sleek design, and intuitive user interface.
@@ -124,7 +124,7 @@
         <!-- next project -->
 
         <div id="SnowSeeker">
-          <h2 id="about3" class="about3">SnowSeeker Overview</h2>
+          <h2 id="about3" class="about3">SnowSeeker</h2>
           <div>
             <h2 class="textLeft">
               Discover and explore ski resorts worldwide with SnowSeeker, the ultimate app for skiing enthusiasts. Optimized for iPads, this app brings you detailed information about ski resorts across the globe.
@@ -173,7 +173,7 @@
         <!-- next project -->
 
         <div id="GalaxyGuide">
-          <h2 id="about3" class="about3">GalaxyGuide Overview</h2>
+          <h2 id="about3" class="about3">GalaxyGuide</h2>
             <div>
               <h2 class="textLeft">
                 Embark on a journey through space exploration history with GalaxyGuide, the essential app for enthusiasts of space missions. Dive into detailed information about missions and their crews with custom views and engaging content.
