--- a/index.html
+++ b/index.html
@@ -156,8 +156,12 @@
             <a href="https://www.youtube.com/">
               <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
             </a>
-            <img />
-            <img />
+            <a href="https://www.youtube.com/">
+              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+            </a>
+            <a href="https://www.youtube.com/">
+              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+            </a>
           </div>
           <div class="button-container">
             <a class="about-button" href="https://github.com/ConnorJamesHill/SnowSeeker">GitHub Link</a>
@@ -205,8 +209,12 @@
               <a href="https://www.youtube.com/">
                 <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
               </a>
-              <img />
-              <img />
+              <a href="https://www.youtube.com/">
+                <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+              </a>
+              <a href="https://www.youtube.com/">
+                <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+              </a>
             </div>
             <div class="button-container">
               <a class="about-button" href="https://github.com/ConnorJamesHill/GalaxyGuide">GitHub Link</a>
