--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
           <h2 id="about3" class="above-img-container">See it For Yourself</h2>
           <div id="imgContainer">
             <a href="https://www.youtube.com/">
-              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="ToDoListExampleOne" />
             </a>
-            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="AppExampleTwo" />
-            <img class="image" src="https://i.postimg.cc/15gxSTbn/To-Do-List2.png" alt="AppExampleThree" />
+            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="ToDoListExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/15gxSTbn/To-Do-List2.png" alt="ToDoListExampleThree" />
           </div>
             <div class="button-container">
               <a class="about-button" href="https://github.com/ConnorJamesHill/ToDoList">GitHub Link</a>
@@ -154,14 +154,10 @@
           <h2 id="about3" class="about3">See it For Yourself</h2>
           <div id="imgContainer">
             <a href="https://www.youtube.com/">
-              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="SnowSeekerExampleOne" />
             </a>
-            <a href="https://www.youtube.com/">
-              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
-            </a>
-            <a href="https://www.youtube.com/">
-              <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
-            </a>
+            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="SnowSeekerExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="SnowSeekerExampleThree" />
           </div>
           <div class="button-container">
             <a class="about-button" href="https://github.com/ConnorJamesHill/SnowSeeker">GitHub Link</a>
@@ -207,14 +203,10 @@
             <h2 id="about3">See it For Yourself</h2>
             <div id="imgContainer">
               <a href="https://www.youtube.com/">
-                <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
+                <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="GalaxyGuideExampleOne" />
               </a>
-              <a href="https://www.youtube.com/">
-                <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
-              </a>
-              <a href="https://www.youtube.com/">
-                <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="AppExampleOne" />
-              </a>
+              <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="GalaxyGuideExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="GalaxyGuideExampleThree" />
             </div>
             <div class="button-container">
               <a class="about-button" href="https://github.com/ConnorJamesHill/GalaxyGuide">GitHub Link</a>
