--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             <a href="https://www.youtube.com/">
               <img class="image" src="https://i.postimg.cc/8zQsv6Sj/YTIconi-Phone-Resized.png" alt="ToDoListExampleOne" />
             </a>
-            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="ToDoListExampleTwo" />
-            <img class="image" src="https://i.postimg.cc/15gxSTbn/To-Do-List2.png" alt="ToDoListExampleThree" />
+            <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="ToDoListExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/hPpcDQtk/To-Do-List2.png" alt="ToDoListExampleThree" />
           </div>
             <div class="button-container">
               <a class="about-button" href="https://github.com/ConnorJamesHill/ToDoList">GitHub Link</a>
