--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <a href="https://www.youtube.com/">
               <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="SnowSeekerExampleOne" />
             </a>
-            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="SnowSeekerExampleTwo" />
-            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="SnowSeekerExampleThree" />
+            <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="SnowSeekerExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/hPpcDQtk/To-Do-List2.png" alt="SnowSeekerExampleThree" />
           </div>
           <div class="button-container">
             <a class="about-button" href="https://github.com/ConnorJamesHill/SnowSeeker">GitHub Link</a>
@@ -205,8 +205,8 @@
               <a href="https://www.youtube.com/">
                 <img class="image" src="https://i.postimg.cc/G2QjCK7z/YTIconi-Phone.png" alt="GalaxyGuideExampleOne" />
               </a>
-              <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="GalaxyGuideExampleTwo" />
-            <img class="image" src="https://i.postimg.cc/6Q3ZvBrc/To-Do-List1.png" alt="GalaxyGuideExampleThree" />
+              <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="GalaxyGuideExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/hPpcDQtk/To-Do-List2.png" alt="GalaxyGuideExampleThree" />
             </div>
             <div class="button-container">
               <a class="about-button" href="https://github.com/ConnorJamesHill/GalaxyGuide">GitHub Link</a>
