--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
           <h2 id="about3" class="above-img-container">See it For Yourself</h2>
           <div id="imgContainer">
-            <a href="https://www.youtube.com/">
+            <a href="https://youtube.com/shorts/c9udxS3x1OA">
               <img class="image" src="https://i.postimg.cc/8zQsv6Sj/YTIconi-Phone-Resized.png" alt="ToDoListExampleOne" />
             </a>
             <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="ToDoListExampleTwo" />
@@ -153,7 +153,7 @@
           </div>
           <h2 id="about3" class="about3">See it For Yourself</h2>
           <div id="imgContainer">
-            <a href="https://www.youtube.com/">
+            <a href="https://youtube.com/shorts/Wbur7Sp_e24">
               <img class="image" src="https://i.postimg.cc/8zQsv6Sj/YTIconi-Phone-Resized.png" alt="SnowSeekerExampleOne" />
             </a>
             <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="SnowSeekerExampleTwo" />
@@ -202,7 +202,7 @@
             </div>
             <h2 id="about3">See it For Yourself</h2>
             <div id="imgContainer">
-              <a href="https://www.youtube.com/">
+              <a href="https://youtube.com/shorts/q2ME1LD9za0">
                 <img class="image" src="https://i.postimg.cc/8zQsv6Sj/YTIconi-Phone-Resized.png" alt="GalaxyGuideExampleOne" />
               </a>
               <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="GalaxyGuideExampleTwo" />
