--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <a href="https://youtube.com/shorts/Wbur7Sp_e24">
               <img class="image" src="https://i.postimg.cc/8zQsv6Sj/YTIconi-Phone-Resized.png" alt="SnowSeekerExampleOne" />
             </a>
-            <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="SnowSeekerExampleTwo" />
-            <img class="image" src="https://i.postimg.cc/hPpcDQtk/To-Do-List2.png" alt="SnowSeekerExampleThree" />
+            <img class="image" src="https://i.postimg.cc/rmny2Hn3/Snow-Seeker1.png" alt="SnowSeekerExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/rmny2Hn3/Snow-Seeker1.png" alt="SnowSeekerExampleThree" />
           </div>
           <div class="button-container">
             <a class="about-button" href="https://github.com/ConnorJamesHill/SnowSeeker">GitHub Link</a>
@@ -205,8 +205,8 @@
               <a href="https://youtube.com/shorts/q2ME1LD9za0">
                 <img class="image" src="https://i.postimg.cc/8zQsv6Sj/YTIconi-Phone-Resized.png" alt="GalaxyGuideExampleOne" />
               </a>
-              <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="GalaxyGuideExampleTwo" />
-            <img class="image" src="https://i.postimg.cc/hPpcDQtk/To-Do-List2.png" alt="GalaxyGuideExampleThree" />
+              <img class="image" src="https://i.postimg.cc/v82TJ4CT/Galaxy-Guide1.png" alt="GalaxyGuideExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/mr4gYC1X/Galaxy-Guide2.png" alt="GalaxyGuideExampleThree" />
             </div>
             <div class="button-container">
               <a class="about-button" href="https://github.com/ConnorJamesHill/GalaxyGuide">GitHub Link</a>
