changed skills for todolist

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </h2>
             <ul class="textLeft">
               <li>Account Creation and Login: Securely create an account and log in to access your personalized to-do lists from any device.</li>
-              <li>Infinite To-Dos: Easily manage an unlimited number of tasks and organize them efficiently.</li>
+              <li>AI Task Generation: Our AI automatically creates personalized to do lists based on your specific needs.</li>
               <li>Great Design and UI: Enjoy a visually appealing interface designed for easy navigation and a seamless user experience.</li>
             </ul>
             <h2 class="textLeft">
@@ -95,11 +95,12 @@
           <h2 id="about3">Tools Used</h2>
           <div class="skills-container">
               <div class="skills">
+                  <div class="skills_skill">Artificial Intelligence</div>
                   <div class="skills_skill">SwiftUI</div>
                   <div class="skills_skill">Firebase Authentication</div>
                   <div class="skills_skill">Firebase Store</div>
                   <div class="skills_skill">UI/UX Design</div>
-                  <div class="skills_skill">User Creation</div>
+                  <div class="skills_skill">User/Account Creation</div>
               </div>
           </div>
           <h2 id="about3" class="above-img-container">See it For Yourself</h2>
@@ -282,260 +283,3 @@
     </main>
   </body>
 </html>
-
-
-<!-- <div class="project-section">
-   <div class="project-1-container">
-    <div class="project1-left">
-      <p class="p1p">project 1 pic</p>
-    </div>
-    <div class="project1-right">
-      <h2 id="about3" class="about3">Project 1</h2>
-      <h2 id="about2" class="aboutSizer">Project description</h2>
-      <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Learn More</a>
-    </div>
-  </div> 
-  <div class="project-2-container">
-    <div class="project2-left">
-      <p class="p2p"></p>
-    </div>
-    <div class="project2-right">
-      <h2 id="about3" class="about3">SnowSeeker</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI project with detailed global ski resort information at your fingertips.</h2>
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#SnowSeeker">Learn More</a>
-    </div>
-  </div>
-   dividing bar  
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  <div class="project-3-container">
-    <div class="project3-left">
-      <p class="p3p"></p>
-    </div>
-     any apollo mission emblem as pic 
-    <div class="project3-right">
-      <h2 id="about3" class="about3">GalaxyGuide</h2>
-      <h2 id="about2" class="aboutSizer">SwiftUI project in which you explore Apollo mission details and crew bios.</h2>
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GalaxyGuide">Learn More</a>
-    </div>
-  </div>
-  \\ dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  <div class="project-4-container">
-    <div class="project4-left">
-      <p class="p4p"></p>
-    </div>
-    \\american flag picture \\
-    <div class="project4-right">
-      <h2 id="about3" class="about3">RPS</h2>
-      <h2 id="about2" class="aboutSizer">A web application of a simple, classic game.</h2>
-      <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
-    </div>
-  </div>
-  \\ dividing bar \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-5-container">
-    <div class="project5-left">
-      <p class="p5p"></p>
-    </div>
-    <div class="project5-right">
-      <h2 id="about3" class="about3">GuessTheFlag</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Learn More</a>
-    </div>
-  </div>
-  \\ end of project \\
-  \\dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-   \\ next project \\
-  <div class="project-6-container">
-    <div class="project6-left">
-      <p class="p6p"></p>
-    </div>
-    <div class="project6-right">
-      <h2 id="about3" class="about3">WordScramble</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI app that allows you to test your ability to create smaller words from a given word.</h2>
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WordScramble">Learn More</a>
-    </div>
-  </div>
-  \\ end of project \\
-  \\dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-7-container">
-    <div class="project7-left">
-      <p class="p7p"></p>
-    </div>
-    <div class="project7-right">
-      <h2 id="about3" class="about3">BucketList</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI app that lets you add personal markers on Apple Maps to bookmark places you want to visit.</h2>
-      \\key feature: secure user authentication to access the app, mapkit, customizable location markers \\
-       \\tools used: mvvm, mapkit, map api \\
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#BucketList">Learn More</a>
-    </div>
-  </div>
-  \\end of project \\
-  \\dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-8-container">
-    <div class="project8-left">
-      <p class="p8p"></p>
-    </div>
-    <div class="project8-right">
-      <h2 id="about3" class="about3">HabitTracker</h2>
-      <h2 id="about2" class="aboutSizer">SwiftUI app for habit tracking that helps you set and monitor goals.</h2>
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#HabitTracker">Learn More</a>
-    </div>
-  </div>
-  \\ end of project \\
-  \\dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-9-container">
-    <div class="project9-left">
-      <p class="p9p"></p>
-    </div>
-    <div class="project9-right">
-      <h2 id="about3" class="about3">InstaFilter</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI project in which you can upload, edit and save photos with descriptions and more.</h2>
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#InstaFilter">Learn More</a>
-    </div>
-  </div>
-  \\end of project \\
-  \\ dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-   \\ next project \\
-  <div class="project-10-container">
-    <div class="project10-left">
-      <p class="p10p"></p>
-    </div>
-    <div class="project10-right">
-      <h2 id="about3" class="about3">X's and O's</h2>
-      <h2 id="about2" class="aboutSizer">SwiftUI app that lets you play classic Tic Tac Toe against a friend or the computer with simple, intuitive controls and a clean interface.</h2>
-      \\ key features: play against a fiend or the computer, play against a friend locally, nice clean ui and customizable names for players \\
-       \\tools used: multipeer connectivity, \\
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#X-sandO-s">Learn More</a>
-    </div>
-  </div>
-  \\ end of project \\
-  \\dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\next project\\
-  <div class="project-11-container">
-    <div class="project11-left">
-      <p class="p11p"></p>
-    </div>
-    <div class="project11-right">
-      <h2 id="about3">ToDoList</h2>
-      <h2 id="about2" class="aboutSizer">An app of a classic to-do list that allows the user to create an account.</h2>
-      \\ key features: user login and account creation,  \\
-       \\ tools used: FireBase auth, firebase \\
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#ToDoList">Learn More</a>
-    </div>
-  </div>
-  \\ end of project \\
-  \\ dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-12-container">
-    <div class="project12-left">
-      <p class="p12p"></p>
-    </div>
-    <div class="project12-right">
-      <h2 id="about3" class="about3">Flashzilla</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI app designed for learning with flashcards, allowing you to create, organize, and study personalized decks of digital flashcards on your device.</h2>
-      <!-- key features: customizable flashcards, prompts and answers, custom flashcards and timed excercise. \\
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#Flashzilla">Learn More</a>
-    </div>
-  </div>
-  \\ end of project \\
-  \\dividing bar \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-13-container">
-    <div class="project13-left">
-      <p class="p13p"></p>
-    </div>
-    <div class="project13-right">
-      <h2 id="about3" class="about3">iExpense</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI app for managing personal and business expenses, enabling users to easily track, categorize, and analyze spending.</h2>
-      \\ both personal AND business expenses can be accounted for \\
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#iExpense">Learn More</a>
-    </div>
-  </div>
-  \\ end of project \\
-  \\ dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-14-container">
-    <div class="project14-left">
-      <p class="p14p"></p>
-    </div>
-    <div class="project14-right">
-      <h2 id="about3" class="about3">CupcakeCorner</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI app for a cupcake store that allows customers to browse, order, and customize cupcakes from a variety of flavors.</h2>
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#CupcakeCorner">Learn More</a>
-    </div>
-  </div>
-  \\ end of project \\
- \\dividing bar  \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-15-container">
-    <div class="project15-left">
-      <p class="p15p"></p>
-    </div>
-    <div class="project15-right">
-      <h2 id="about3" class="about3">BetterRest</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI app utilizing machine learning to determine the optimal sleeping schedule for users based on their personalized data.</h2>
-      \\ machine learning, notifies user when its time to sleep, save sleep for the user  \\
-       \\machine learning, notifications, alerts \\
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#BetterRest">Learn More</a>
-    </div>
-  </div>
-  \\ end of project\\
-  \\ dividing bar \\
-  <div>
-    <div class="paddingTop"></div>
-  </div>
-  \\ next project \\
-  <div class="project-16-container">
-    <div class="project16-left">
-      <p class="p16p"></p>
-    </div>
-    <div class="project16-right">
-      <h2 id="about3" class="about3">WeSplit</h2>
-      <h2 id="about2" class="aboutSizer">A SwiftUI app that calculates and divides tips and payments evenly among groups of people.</h2>
-      <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WeSplit">Learn More</a>
-    </div>
-  </div>
-  \\ end of project\\
-  \\end of project section \\
-</div> -->
