changed todolist to auto do it

--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
         <h2 id="about2" class="aboutSizer">These are some of my projects!</h2>
         
         <div id="ToDoList">
-          <h2 id="about3">ToDoList</h2>
+          <h2 id="about3">Auto Do It</h2>
           <div>
             <h2 class="textLeft">
-              ToDoList is your essential app for organizing tasks with a classic to-do list format. Create an account to unlock seamless task management with infinite to-dos, a sleek design, and intuitive user interface.
+              Auto Do It is your essential app for organizing tasks with a classic to-do list format. Create an account to unlock seamless task management with infinite to-dos, a sleek design, and intuitive user interface, all powered by AI technology.
             </h2>
             <h2 class="textLeft">
               Key Features:
             </h2>
             <ul class="textLeft">
-              <li>Account Creation and Login: Securely create an account and log in to access your personalized to-do lists from any device.</li>
+              <li>Account Creation and Login: Securely create an account and log in to access your personalized to do lists from any device.</li>
               <li>AI Task Generation: Our AI automatically creates personalized to do lists based on your specific needs.</li>
               <li>Great Design and UI: Enjoy a visually appealing interface designed for easy navigation and a seamless user experience.</li>
             </ul>
             <h2 class="textLeft">
-              Whether you're managing daily chores, planning projects, or prioritizing deadlines, ToDoList helps you stay organized and productive. Download on GitHub now and start checking off your tasks!
+              Whether you're managing daily chores, planning projects, or prioritizing deadlines, Auto Do It helps you stay organized and productive. Download on GitHub now and start checking off your tasks!
             </h2>
           </div>
           <h2 id="about3">Tools Used</h2>
