updated screnshots for auto do it

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
           <h2 id="about3" class="above-img-container">See it For Yourself</h2>
           <div id="imgContainer">
             <a href="https://youtube.com/shorts/c9udxS3x1OA">
-              <img class="image" src="https://i.postimg.cc/8zQsv6Sj/YTIconi-Phone-Resized.png" alt="ToDoListExampleOne" />
+              <img class="image" src="https://i.postimg.cc/W3XkVhBc/Auto-Do-It1.png" alt="ToDoListExampleOne" />
             </a>
-            <img class="image" src="https://i.postimg.cc/wjwvGbNs/To-Do-List1.png" alt="ToDoListExampleTwo" />
-            <img class="image" src="https://i.postimg.cc/hPpcDQtk/To-Do-List2.png" alt="ToDoListExampleThree" />
+            <img class="image" src="https://i.postimg.cc/pX9FNVk3/Auto-Do-It2.png" alt="ToDoListExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/pX9FNVk3/Auto-Do-It2.png" alt="ToDoListExampleThree" />
           </div>
             <div class="button-container">
               <a class="about-button" href="https://github.com/ConnorJamesHill/ToDoList">GitHub Link</a>
