--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             <a href="https://youtube.com/shorts/c9udxS3x1OA">
               <img class="image" src="https://i.postimg.cc/W3XkVhBc/Auto-Do-It1.png" alt="ToDoListExampleOne" />
             </a>
-            <img class="image" src="https://i.postimg.cc/pX9FNVk3/Auto-Do-It2.png" alt="ToDoListExampleTwo" />
-            <img class="image" src="https://i.postimg.cc/pX9FNVk3/Auto-Do-It2.png" alt="ToDoListExampleThree" />
+            <img class="image" src="https://i.postimg.cc/pTzPQ7BG/Auto-Do-It3.png" alt="ToDoListExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/0NL8wx7K/Auto-Do-It2.png" alt="ToDoListExampleThree" />
           </div>
             <div class="button-container">
               <a class="about-button" href="https://github.com/ConnorJamesHill/ToDoList">GitHub Link</a>
