--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <img class="image" src="https://i.postimg.cc/0NL8wx7K/Auto-Do-It2.png" alt="ToDoListExampleThree" />
           </div>
             <div class="button-container">
-              <a class="about-button" href="https://github.com/ConnorJamesHill/ToDoList">GitHub Link</a>
+              <a class="about-button" href="https://apps.apple.com/us/app/auto-do-it/id6670796120">AppStore Link</a>
             </div>
         </div>
 
