--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section id="welcome-section" class="Welcome">
         <img class="round-image" src="https://i.postimg.cc/26JkrGZ5/IMG-9353.png" alt="Picture of Me!" />
         <h1 id="welc-about1" class="welc-about1">Hey, I'm Connor Hill</h1>
-        <h2 id="welc-about" class="welc-about">An iOS and front end focused software developer building iOS apps and the front end of websites that lead to the success of the overall product.</h2>   
+        <h2 id="welc-about" class="welc-about">An iOS focused software developer building iOS apps and various other applications that lead to the success of the overall product.</h2>   
         <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
       <section id="about" class="About-mee">
@@ -42,8 +42,8 @@
         <div class="about-section">
           <div class="abouts">
             <h2 id="about3" class="about3">Here I am!</h2>
-            <h2 id="about4" class="aboutSizer2">I'm an <strong>iOS and front end web developer</strong> building iOS apps and the front end of websites that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
-            <h2 id="about5" class="aboutSizer2">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS and web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development, web development, and programming in general.</h2>
+            <h2 id="about4" class="aboutSizer2">I'm an <strong>iOS developer</strong> building iOS apps and various other applications that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
+            <h2 id="about5" class="aboutSizer2">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development and programming in general.</h2>
             <h2 id="about6" class="aboutSizer2">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="about-button" href="./#contactLanding">Contact</a>
           </div>
@@ -254,7 +254,7 @@
         <div class="above-bar-footer">
           <div class="footdiv-left">
             <h2 class="footer-name" id="about10">Connor Hill</h2>
-            <h3 class="footer-description" id="about11">An iOS and front end focused software developer building iOS apps and the front end of websites that lead to the success of the overall product.</h3>
+            <h3 class="footer-description" id="about11">An iOS focused software developer building iOS apps and various other applications that lead to the success of the overall product.</h3>
           </div>
           <div class="footdiv-right">
             <h2 class="socials">Socials</h2>
