--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <li>Great Design and UI: Enjoy a visually appealing interface designed for easy navigation and a seamless user experience.</li>
             </ul>
             <h2 class="textLeft">
-              Whether you're managing daily chores, planning projects, or prioritizing deadlines, Auto Do It helps you stay organized and productive. Download on GitHub now and start checking off your tasks!
+              Whether you're managing daily chores, planning projects, or prioritizing deadlines, Auto Do It helps you stay organized and productive. Download on the AppStore now, and start checking off your tasks!
             </h2>
           </div>
           <h2 id="about3">Tools Used</h2>
