--- a/index.html
+++ b/index.html
@@ -73,6 +73,56 @@
         <h2 id="about1" class="about1">PROJECTS</h2>
         <div class="barz"></div>
         <h2 id="about2" class="aboutSizer">These are some of my projects!</h2>
+
+        <div id="ToDoList">
+          <h2 id="about3">BookWorm!</h2>
+          <div>
+            <h2 class="textLeft">
+              Auto Do It is your essential app for organizing tasks with a classic to-do list format. Create an account to unlock seamless task management with infinite to-dos, a sleek design, and intuitive user interface, all powered by AI technology.
+            </h2>
+            <h2 class="textLeft">
+              Key Features:
+            </h2>
+            <ul class="textLeft">
+              <li>Account Creation and Login: Securely create an account and log in to access your personalized to do lists from any device.</li>
+              <li>AI Task Generation: Our AI automatically creates personalized to do lists based on your specific needs.</li>
+              <li>Great Design and UI: Enjoy a visually appealing interface designed for easy navigation and a seamless user experience.</li>
+            </ul>
+            <h2 class="textLeft">
+              Whether you're managing daily chores, planning projects, or prioritizing deadlines, Auto Do It helps you stay organized and productive. Download on the AppStore now, and start checking off your tasks!
+            </h2>
+          </div>
+          <h2 id="about3">Tools Used</h2>
+          <div class="skills-container">
+              <div class="skills">
+                  <div class="skills_skill">Swift Data</div>
+                  <div class="skills_skill">Open AI API</div>
+                  <div class="skills_skill">Google Books API</div>
+                  <div class="skills_skill">Artificial Intelligence</div>
+                  <div class="skills_skill">SwiftUI</div>
+                  <div class="skills_skill">UI/UX Design</div>
+              </div>
+          </div>
+          <h2 id="about3" class="above-img-container">See it For Yourself</h2>
+          <div id="imgContainer">
+            <a href="https://youtube.com/shorts/c9udxS3x1OA">
+              <img class="image" src="https://i.postimg.cc/W3XkVhBc/Auto-Do-It1.png" alt="ToDoListExampleOne" />
+            </a>
+            <img class="image" src="https://i.postimg.cc/pTzPQ7BG/Auto-Do-It3.png" alt="ToDoListExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/0NL8wx7K/Auto-Do-It2.png" alt="ToDoListExampleThree" />
+          </div>
+            <div class="button-container">
+              <a class="about-button" href="https://apps.apple.com/us/app/auto-do-it/id6670796120">AppStore Link</a>
+            </div>
+        </div>
+
+        <!-- dividing bar  -->
+        <div>
+          <div class="paddingTop"></div>
+          <div class="projectBarz"></div>
+          <div class="paddingBottom"></div>
+        </div>
+        <!-- next project -->
         
         <div id="ToDoList">
           <h2 id="about3">Auto Do It</h2>
