--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
           <h2 id="about3">BookWorm!</h2>
           <div>
             <h2 class="textLeft">
-              Auto Do It is your essential app for organizing tasks with a classic to-do list format. Create an account to unlock seamless task management with infinite to-dos, a sleek design, and intuitive user interface, all powered by AI technology.
+              Stay organized and find new favorite books for yourself or others with BookWorm! This app is powered by AI technology. Keep books organized and refined. Download now!
             </h2>
             <h2 class="textLeft">
               Key Features:
             </h2>
             <ul class="textLeft">
-              <li>Account Creation and Login: Securely create an account and log in to access your personalized to do lists from any device.</li>
-              <li>AI Task Generation: Our AI automatically creates personalized to do lists based on your specific needs.</li>
-              <li>Great Design and UI: Enjoy a visually appealing interface designed for easy navigation and a seamless user experience.</li>
+              <li>AI-Powered Recommendations: Harness the power of Al to analyze your library and preferences, delivering tailored book suggestions that suit your interests and reading goals.</li>
+              <li>Organized Book Categorization: Keep your library in perfect order with intuitive organization tools. Sort books by genre, author, reading status, and more.</li>
+              <li>Discover Hidden Gems: Explore handpicked recommendations and trending titles, ensuring you never miss a great read.</li>
             </ul>
             <h2 class="textLeft">
-              Whether you're managing daily chores, planning projects, or prioritizing deadlines, Auto Do It helps you stay organized and productive. Download on the AppStore now, and start checking off your tasks!
+              With BookWorm!, your library becomes a dynamic gateway to a world of stories, knowledge, and adventure. Unleash your reading potential and turn every page with purpose.
             </h2>
           </div>
           <h2 id="about3">Tools Used</h2>
