--- a/index.html
+++ b/index.html
@@ -74,6 +74,56 @@
         <div class="barz"></div>
         <h2 id="about2" class="aboutSizer">These are some of my projects!</h2>
 
+        <div id="PerkPunch">
+          <h2 id="about3">Perk Punch!</h2>
+          <div>
+            <h2 class="textLeft">
+              Transform the way you earn rewards and support local businesses with Perk Punch! Say goodbye to lost punch cards and hello to a seamless digital loyalty experience. Keep all your favorite businesses' rewards in one convenient place. Download now!
+            </h2>
+            <h2 class="textLeft">
+              Key Features:
+            </h2>
+            <ul class="textLeft">
+              <li>Digital Loyalty Cards: Never lose a physical punch card again. Store all your loyalty cards in one secure digital wallet.</li>
+              <li>QR Code Scanning: Quick and easy check-ins at your favorite businesses. Show your unique QR code at checkout and watch your rewards grow.</li>
+              <li>Discover Local Gems: Explore participating businesses in your area and become part of a community that values loyalty and quality.</li>
+              <li>Universal Punches: Special punches that work at all participating locations, giving you even more flexibility and rewards.</li>
+              <li>Real-Time Tracking: Monitor your progress with detailed analytics and get notified when you're close to earning your next reward.</li>
+            </ul>
+            <h2 class="textLeft">
+              With Perk Punch!, supporting local businesses and earning rewards has never been easier. Join customers who are already saving money while strengthening their community connections!
+            </h2>
+          </div>
+          <h2 id="about3">Tools Used</h2>
+          <div class="skills-container">
+              <div class="skills">
+                  <div class="skills_skill">SwiftUI</div>
+                  <div class="skills_skill">Firebase</div>
+                  <div class="skills_skill">QR Code Technology</div>
+                  <div class="skills_skill">RevenueCat</div>
+                  <div class="skills_skill">Swift Data</div>
+                  <div class="skills_skill">UI/UX Design</div>
+              </div>
+          </div>
+          <h2 id="about3" class="above-img-container">See it For Yourself</h2>
+            <div id="imgContainer">
+              <img class="image" src="https://i.postimg.cc/7PT9Sk37/01.png" alt="PerkPunchExampleOne" />
+              <img class="image" src="https://i.postimg.cc/m2B9hf8t/02.png" alt="PerkPunchExampleTwo" />
+              <img class="image" src="https://i.postimg.cc/kGcBWGfd/08.png" alt="PerkPunchExampleThree" />
+            </div>
+            <div class="button-container">
+              <a class="about-button" href="https://apps.apple.com/pk/app/perk-punch/id6746662386">AppStore Link</a>
+            </div>
+        </div>
+
+        <!-- dividing bar  -->
+        <div>
+          <div class="paddingTop"></div>
+          <div class="projectBarz"></div>
+          <div class="paddingBottom"></div>
+        </div>
+        <!-- next project -->
+
         <div id="ToDoList">
           <h2 id="about3">BookWorm!</h2>
           <div>
