--- a/index.html
+++ b/index.html
@@ -154,7 +154,12 @@
               </div>
           </div>
           <h2 id="about3" class="above-img-container">See it For Yourself</h2>
-            <div class="button-container">
+          <div id="imgContainer">
+            <img class="image" src="https://i.postimg.cc/VLWVbw1Y/Book-Worm1.png" alt="BookWormExampleOne" />
+            <img class="image" src="https://i.postimg.cc/zXzk6gmc/Book-Worm3.png" alt="BookWormExampleTwo" />
+            <img class="image" src="https://i.postimg.cc/pXLDqM8B/Book-Worm7.png" alt="BookWormExampleThree" />
+          </div>
+          <div class="button-container">
               <a class="about-button" href="https://apps.apple.com/us/app/bookworm/id6738531588">AppStore Link</a>
             </div>
         </div>
