--- a/index.html
+++ b/index.html
@@ -108,18 +108,21 @@
           <h2 id="about3" class="above-img-container">See it For Yourself</h2>
           <div id="imgContainer">
             <img
+              class="image"
               src="https://i.postimg.cc/7PT9Sk37/01.png"
               alt="PerkPunchExampleOne"
               style="border-radius: 22px; overflow: hidden;"
             />
           
             <img
+              class="image"
               src="https://i.postimg.cc/m2B9hf8t/02.png"
               alt="PerkPunchExampleTwo"
               style="border-radius: 22px; overflow: hidden;"
             />
           
             <img
+              class="image"
               src="https://i.postimg.cc/kGcBWGfd/08.png"
               alt="PerkPunchExampleThree"
               style="border-radius: 22px; overflow: hidden;"
